move student check access to redis